--- a/heavencore/pom.xml
+++ b/heavencore/pom.xml
@@ -11,6 +11,10 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 
+	<build>
+		<finalName>${project.artifactId}</finalName>
+	</build>
+
 	<repositories>
 		<repository>
 			<id>spigot-repo</id>
