[All] Working on architecture

--- a/heavenguard/src/main/resources/plugin.yml
+++ b/heavenguard/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: HeavenGuard
 version: 1.0
 main: fr.heavencraft.heavenguard.bukkit.HeavenGuard
-depend: [WorldEdit]
+depend: [WorldEdit, HeavenCore]
 commands:
   region:
     aliases: rg
