--- a/heavencrea/pom.xml
+++ b/heavencrea/pom.xml
@@ -21,5 +21,11 @@
 			<artifactId>heavencore</artifactId>
 			<version>2.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>fr.heavencraft</groupId>
+			<artifactId>heavenguard</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 </project>
