--- a/heavencrea/src/main/resources/plugin.yml
+++ b/heavencrea/src/main/resources/plugin.yml
@@ -1,5 +1,8 @@
 name: HeavenCrea
 version: 1.0
-main: fr.heavencraft.heavencrea.CreativePlugin
+main: fr.heavencraft.heavencrea.HeavenCrea
 depend: [HeavenCore]
 load: startup
+commands:
+  jetons:
+    aliases: [jeton]
