--- a/heavenguard/pom.xml
+++ b/heavenguard/pom.xml
@@ -11,6 +11,10 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 
+	<build>
+		<finalName>${project.artifactId}</finalName>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>fr.heavencraft</groupId>
