[HellCraft] fixe things

--- a/hellcraft/src/main/resources/plugin.yml
+++ b/hellcraft/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
-name: HellGame
+name: HellCraft
+version: 2.0
 main: fr.heavencraft.hellcraft.HellCraft
-version: 1.0
+depend: [HeavenCore]
 commands:
   hps:
     aliases: hp
