--- a/heavenrp/pom.xml
+++ b/heavenrp/pom.xml
@@ -3,65 +3,36 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.heavencraft</groupId>
 	<artifactId>heavenrp</artifactId>
-	<version>1.0</version>
+	<version>1.1</version>
 
-	<properties><!-- Fix encoding warnings -->
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 
-<!-- 	<repositories> -->
-<!-- 		<repository> -->
-<!-- 			<id>kitteh-repo</id> -->
-<!-- 			<url>http://repo.kitteh.org/content/repositories/public/</url> -->
-<!-- 		</repository> -->
-<!-- 	</repositories> -->
+	<build>
+		<finalName>${project.artifactId}</finalName>
+	</build>
+
+	<repositories>
+		<repository>
+			<id>sk89q-repo</id>
+			<url>http://maven.sk89q.com/repo/</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
 			<groupId>fr.heavencraft</groupId>
 			<artifactId>heavencore</artifactId>
-			<version>1.0</version>
+			<version>2.0</version>
 		</dependency>
-
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.kitteh</groupId> -->
-<!-- 			<artifactId>tagapi</artifactId> -->
-<!-- 			<version>3.0.4</version> -->
-<!-- 		</dependency> -->
-
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.30</version>
+			<groupId>com.sk89q</groupId>
+			<artifactId>worldguard</artifactId>
+			<version>5.9</version>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.1</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<artifactSet>
-						<includes>
-							<include>fr.heavencraft:heavencore</include>
-						</includes>
-					</artifactSet>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
