--- a/heavenrp/pom.xml
+++ b/heavenrp/pom.xml
@@ -34,5 +34,11 @@
 			<artifactId>worldguard</artifactId>
 			<version>5.9</version>
 		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.14</version>
+		</dependency>
 	</dependencies>
 </project>
