--- a/Vault/pom.xml
+++ b/Vault/pom.xml
@@ -4,52 +4,13 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<bukkitVersion>1.7.9-R0.2</bukkitVersion>
 		<mainClass>${project.groupId}.${project.artifactId}</mainClass>
-		<api.version>1.4</api.version>
+		<api.version>1.5</api.version>
 	</properties>
 
-	<!-- Project information -->
 	<groupId>net.milkbowl.vault</groupId>
 	<artifactId>Vault</artifactId>
-	<version>${api.version}.2-SNAPSHOT</version>
-	<name>Vault</name>
-	<url>http://dev.bukkit.org/server-mods/vault/</url>
-	<description>Vault is a Permissions &amp; Economy API to allow plugins to more easily hook into these systems without needing to hook each individual system themselves.
-
-Vault currently supports the following: Permissions 3, PEX, GroupManager, bPerms, bPerms2, SimplyPerms, DroxPerms, zPermissions, rscPermissions, KPerms, Starburst, iConomy (4/5/6) BOSEconomy *6/7), EssentialsEcon, 3Co, MultiConomy, MineConomy, EconXP, eWallet, CurrencyCore, XPBank, CraftConomy, AEco, SDFEconomy, TAEcon</description>
-
-
-
-	<!-- Organization -->
-	<organization>
-		<name>MilkBowl</name>
-		<url>https://github.com/MilkBowl/Vault</url>
-	</organization>
-
-	<scm>
-		<url>https://github.com/MilkBowl/Vault</url>
-		<connection>scm:git:git://github.com:MilkBowl/Vault.git</connection>
-		<developerConnection>scm:git:git@github.com:MilkBowl/Vault.git</developerConnection>
-	</scm>
-
-	<issueManagement>
-		<system>GitHub</system>
-		<url>https://github.com/MilkBowl/Vault/issues</url>
-	</issueManagement>
-
-	<distributionManagement>
-		<repository>
-			<id>pub-repo</id>
-			<name>Public Releases</name>
-			<url>http://nexus.theyeticave.net/content/repositories/pub_releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>pub-repo</id>
-			<name>Public Snapshots</name>
-			<url>http://nexus.theyeticave.net/content/repositories/pub_snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
+	<version>${api.version}.6</version>
 
 	<repositories>
 		<repository>
@@ -57,44 +18,13 @@ Vault currently supports the following: Permissions 3, PEX, GroupManager, bPerms
 			<name>Public Releases</name>
 			<url>http://nexus.theyeticave.net/content/repositories/pub_releases/</url>
 		</repository>
-		<repository>
-			<id>spigot-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-		</repository>
-		<repository>
-			<id>greatman-repo</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-		</repository>
-		<repository>
-			<id>bukkit-repo</id>
-			<url>http://repo.bukkit.org/content/groups/public/</url>
-		</repository>
-		<repository>
-			<id>krinsoft</id>
-			<url>http://ci.krincraft.net/plugin/repository/everything/</url>
-		</repository>
-		<repository>
-			<id>escapecraft-repo</id>
-			<url>http://dev.escapecraft.com/maven</url>
-		</repository>
 	</repositories>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>${bukkitVersion}</version>
-		</dependency>
-		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>VaultAPI</artifactId>
 			<version>${api.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>de.hydrox.bukkit</groupId>
-			<artifactId>DroxPerms</artifactId>
-			<version>0.5.0</version>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.platymuus.bukkit.permissions.PermissionsPlugin</groupId>
@@ -113,15 +43,9 @@ Vault currently supports the following: Permissions 3, PEX, GroupManager, bPerms
 			<systemPath>${project.basedir}/lib/Register.jar</systemPath>
 		</dependency>
 		<dependency>
-			<groupId>com.greatmancode</groupId>
-			<artifactId>craftconomy3</artifactId>
-			<version>3.2.2-SNAPSHOT</version>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
 			<groupId>fr.heavencraft</groupId>
 			<artifactId>heavenrp</artifactId>
-			<version>1.0</version>
+			<version>1.1</version>
 		</dependency>
 	</dependencies>
 
