--- a/heavencore/pom.xml
+++ b/heavencore/pom.xml
@@ -29,6 +29,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>fr.heavencraft</groupId>
+			<artifactId>heavencore-common</artifactId>
+			<version>2.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
 			<version>1.9-R0.1-SNAPSHOT</version>
