--- a/heavenguard-common/pom.xml
+++ b/heavenguard-common/pom.xml
@@ -2,30 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.heavencraft</groupId>
-	<artifactId>heavenguard</artifactId>
+	<artifactId>heavenguard-common</artifactId>
 	<version>1.0</version>
 
-	<properties><!-- Fix encoding warnings -->
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-
-	<build>
-		<finalName>${project.artifactId}</finalName>
-	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>fr.heavencraft</groupId>
-			<artifactId>heavenguard-common</artifactId>
-			<version>1.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>fr.heavencraft</groupId>
-			<artifactId>heavencore</artifactId>
-			<version>2.0</version>
-		</dependency>
-	</dependencies>
 </project>
