--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+dependency-reduced-pom.xml
 
 ###########
 # Eclipse #
