--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>heavenguard-common</module>
 		<module>heavenrp</module>
 		<module>HeavenRPG</module>
+        <module>heavenvip</module>
 		<module>heavenskyblock</module>
 		<module>hellcraft</module>
 		<module>Vault</module>
