Add HeavenSurvival (Common & Bukkit)

--- a/heavenguard/src/main/resources/plugin.yml
+++ b/heavenguard/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: HeavenGuard
 version: 1.0
-main: fr.heavencraft.heavenguard.bukkit.HeavenGuard
+main: fr.heavencraft.heavenguard.bukkit.BukkitHeavenGuard
 depend: [WorldEdit, HeavenCore]
 commands:
   region:
