[str block] add to parent pom xml

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<module>HeavenRPG</module>
 		<module>heavenskyblock</module>
 		<module>hellcraft</module>
-		<module>Vault</module>
+		<module>Vault</module>		
+		<module>structureblock</module>
 	</modules>
 </project>
