--- a/heavenevent/pom.xml
+++ b/heavenevent/pom.xml
@@ -25,9 +25,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>1.9-R0.1-SNAPSHOT</version>
+			<groupId>fr.heavencraft</groupId>
+			<artifactId>heavencore</artifactId>
+			<version>2.0</version>
 		</dependency>
 	</dependencies>
 </project>
