Use HikariCP (and change other little things)

--- a/heavencore/pom.xml
+++ b/heavencore/pom.xml
@@ -63,6 +63,8 @@
 					<artifactSet>
 						<includes>
 							<include>fr.heavencraft:heavencore-common</include>
+							<include>com.zaxxer:HikariCP</include>
+							<include>org.slf4j:slf4j-api</include>
 						</includes>
 					</artifactSet>
 				</configuration>
