--- a/heavenevent/pom.xml
+++ b/heavenevent/pom.xml
@@ -15,19 +15,11 @@
 		<finalName>${project.artifactId}</finalName>
 	</build>
 
-	<repositories>
-		<repository>
-			<id>spigot-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-		</repository>
-	</repositories>
-
-
 	<dependencies>
 		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>1.9-R0.1-SNAPSHOT</version>
+			<groupId>fr.heavencraft</groupId>
+			<artifactId>heavencore</artifactId>
+			<version>2.0</version>
 		</dependency>
 	</dependencies>
 </project>
