--- a/heavenfun-bukkit/src/main/resources/plugin.yml
+++ b/heavenfun-bukkit/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: HeavenFun
-main: fr.heavencraft.heavenfun.HeavenFun
-version: 1.0
+main: fr.heavencraft.heavenfun.BukkitHeavenFun
+depend: [HeavenCore]
+version: 1.1
 commands:
 #
 # HeavenCore
@@ -19,3 +20,5 @@ commands:
 #
   spawn:
   event:
+  fp:
+  fpa:
