--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>heavenfun-common</module>
 		<module>heavenguard</module>
 		<module>heavenguard-common</module>
+		<module>heavenquest</module>
 		<module>heavenrp</module>
 		<module>HeavenRPG</module>
         <module>heavenvip</module>
