--- a/heavenquest/pom.xml
+++ b/heavenquest/pom.xml
@@ -10,24 +10,29 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+
 	<repositories>
 		<repository>
 			<id>citizen</id>
 			<url>http://repo.citizensnpcs.co</url>
 		</repository>
 	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>fr.heavencraft</groupId>
 			<artifactId>heavencore</artifactId>
 			<version>2.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>net.citizensnpcs</groupId>
 			<artifactId>citizensapi</artifactId>
 			<version>2.0.19-SNAPSHOT</version>
 		</dependency>
-
 	</dependencies>
 
+	<build>
+		<finalName>${project.artifactId}</finalName>
+	</build>
 </project>
