--- a/heavenquest/src/main/resources/plugin.yml
+++ b/heavenquest/src/main/resources/plugin.yml
@@ -1,9 +1,10 @@
 name: HeavenQuest
-main: fr.hc.quest.Heavenquest
+main: fr.hc.quest.HeavenQuest
 depend: [HeavenCore,Citizens]
 version: 0.1
 commands:
   bobby:
+    description: Appelle Bobby, ton meilleur ami
   scrolls:
     description: Permet la génération de parchemins
   test:
