--- a/heavenquest/pom.xml
+++ b/heavenquest/pom.xml
@@ -27,7 +27,7 @@
 
 		<dependency>
 			<groupId>net.citizensnpcs</groupId>
-			<artifactId>citizensapi</artifactId>
+			<artifactId>citizens</artifactId>
 			<version>2.0.19-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
