--- a/heavencore-common/pom.xml
+++ b/heavencore-common/pom.xml
@@ -17,5 +17,17 @@
 			<artifactId>HikariCP</artifactId>
 			<version>2.4.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.21</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.jafama</groupId>
+			<artifactId>jafama</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 	</dependencies>
 </project>
